--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "gapi-script": "^1.2.0",
+    "js-cookie": "^3.0.5",
     "js-queue": "^2.0.2",
     "jsonwebtoken": "^9.0.0",
     "jws": "^4.0.0",
