Revert to Vercel

--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,19 +2,18 @@
   "version": 2,
   "builds": [
     {
-      "src": "App/App.js",
+      "src": "App.js",
       "use": "@vercel/node"
     }
   ],
-  "rewrites": [
-    { "source": "/(.*)", "destination": "App/App.js" }
-  ],
-  "headers": [
+  "routes": [
     {
-      "source": "/(.*)",
-      "headers": [
-        { "key": "Access-Control-Allow-Origin", "value": "*" }
-      ]
+      "src": "/(.*)",
+      "dest": "App.js",
+      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+      "headers": {
+        "Access-Control-Allow-Origin": "*"
+      }
     }
   ]
 }
