--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "private": true,
   "dependencies": {
+    "@elasticemail/elasticemail-client": "^4.0.23",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -17,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
+    "elasticemail": "^0.2.0",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "gapi-script": "^1.2.0",
