--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_API="https://ecommerce-un-server.vercel.app/api"
+REACT_APP_API="http://localhost:5000/api"
 
-#http://localhost:5000
+#https://ecommerce-un-server.vercel.app
