--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "date-fns": "^2.30.0",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "elasticemail": "^0.2.0",
